# urlstalker-api

./: README.md  alembic.ini  pyproject.toml
alembic/versions/: 37c7847fa871_create_resources_and_snapshots_tables.py
scripts/: format  format.sh  migrate.sh  run.sh
tests/: conftest.py  test_app.py
urlstalker/: app.py  crud.py  database.py  main.py  models.py  schemas.py
