[tool.poetry]
name = "urlstalker"
version = "0.1.0"
description = "Tool for tracking changes to end-points based on URL"
authors = ["Jan Hein de Jong <janhein.dejong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
requests = "^2.27.1"
uvicorn = "^0.17.4"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.31"}
alembic = "^1.7.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
pytest = "^7.0.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

